<resources>
    <string name="app_name">Android1_2</string>
    <string name="text1">1</string>
    <string name="text2">2</string>
    <string name="text3">3</string>
    <string name="text4">4</string>
    <string name="text5">5</string>
    <string name="text6">6</string>
    <string name="text7">7</string>
    <string name="text8">8</string>
    <string name="text9">9</string>
    <string name="text0">0</string>
    <string name="textPoint">.</string>
    <string name="textPlus">+</string>
    <string name="textMultiply">*</string>
    <string name="textDivide">÷</string>
    <string name="textEqual">=</string>
    <string name="textMinus">-</string>
    <string name="textPlusMinus">+/-</string>
    <string name="textReset">С</string>
    <string name="deleteFromLeft">&#9003;</string>
    <string name="radioLightMode">Light mode</string>
    <string name="radioNightMode">Night mode</string>
    <string name="changeTheme">Сменить тему</string>
    <string name="settingsText">Настройки</string>


</resources>