<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"

    >


    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/background_main" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tableLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radioButtonLightTheme"
            style="@style/StyleForRadioGroupOfThemes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioLightMode" />

        <RadioButton
            android:id="@+id/radioButtonNightTheme"
            style="@style/StyleForRadioGroupOfThemes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioNightMode" />
    </RadioGroup>


    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="bottom|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TableRow>

            <TextView
                android:id="@+id/display"
                android:layout_width="match_parent"
                android:layout_height="@dimen/heightOfDisplay"
                android:layout_marginBottom="@dimen/marginBottomForDisplay"
                android:layout_span="4"
                android:background="@color/colorForDisplayBackground"
                android:textColor="@color/colorForNumbers"
                android:textSize="30sp" />
        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonReset"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_column="0"
                android:layout_marginEnd="@dimen/_10dp"
                android:backgroundTint="@color/buttonReset"
                android:text="@string/textReset"
                android:textColor="@color/black"
                android:textSize="@dimen/buttonNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDeleteFromLeft"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_column="3"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/deleteFromLeft"
                android:textColor="@color/greenForButtonsOfAction"
                android:textSize="@dimen/buttonDeleteFromLeft" />


        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonOne"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text1"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonTwo"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text2"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonThree"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text3"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPlus"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:text="@string/textPlus"
                android:theme="@style/StyleForOperators" />
        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonFour"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text4"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonFive"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text5"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton

                android:id="@+id/buttonSix"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text6"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMinus"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:text="@string/textMinus"
                android:theme="@style/StyleForOperators" />
        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSeven"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text7"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEight"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text8"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonNine"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text9"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonMultiply"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:text="@string/textMultiply"
                android:theme="@style/StyleForOperators" />
        </TableRow>

        <TableRow>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonPoint"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/textPoint"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonZero"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="7dp"
                android:text="@string/text0"
                android:theme="@style/StyleForNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonEqual"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:layout_marginEnd="@dimen/_10dp"
                android:backgroundTint="@color/greenForButtonsOfAction"
                android:text="@string/textEqual"
                android:textColor="@color/black"
                android:textSize="@dimen/buttonNumbers" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonDivide"
                android:layout_width="@dimen/sizeForButtons"
                android:layout_height="@dimen/sizeForButtons"
                android:text="@string/textDivide"
                android:theme="@style/StyleForOperators" />

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>